--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.8",
         "vlucas/phpdotenv": "^5.6"
     },
